Refactor di DashboardController